# mzgl-plugin-starter

./: .gitignore  CMakeLists.txt  LICENSE  README.md  auv3.cmake
res/app/: Info.plist  app.entitlements
res/auv3/: Info.plist
src/: AUV3.mm  main.cpp
